--- a/molecule/drupal9/playbook.yml
+++ b/molecule/drupal9/playbook.yml
@@ -103,6 +103,19 @@
         steamengine_drupal_install_from_drush: true
         steamengine_drupal_install_use_existing_config: true
         steamengine_drupal_install_from_db_dump: false
-        steamengine_db_dump_url: https://delivery.steamulo.org/SteamEngineV2_tests/db_dump_drupal_8.zip
-        steamengine_build_url: https://delivery.steamulo.org/SteamEngineV2_tests/drupal_8.zip
-        steamengine_build_checksum: sha1:a354cceb222ef776644394f72f3f9278265ba6ae
+        steamengine_db_dump_url: https://delivery.steamulo.org/SteamEngineV2_tests/db_dump_drupal_9.zip
+        steamengine_build_url: https://delivery.steamulo.org/SteamEngineV2_tests/drupal_9.zip
+        steamengine_build_checksum: sha1:d5914515d2e6aeec5dae06c3476cd198792abbbe
+        steamengine_drupal_project_setting_block: |
+          $databases['default']['default'] = array (
+            'database' => 'drupal',
+            'username' => 'drupal',
+            'password' => 'drupal',
+            'prefix' => '',
+            'host' => 'localhost',
+            'port' => '3306',
+            'namespace' => 'Drupal\\Core\\Database\\Driver\\mysql',
+            'driver' => 'mysql',
+          );
+          $settings['hash_salt'] = 'ChangeMe';
+          $settings['config_sync_directory'] = '../config';
