Upgrade molecule, ansible, python. Add test for centos8 and ubuntu20.

--- a/tasks/common/runtime.yml
+++ b/tasks/common/runtime.yml
@@ -41,4 +41,7 @@
   template:
     src: logrotate.conf.j2
     dest: "/etc/logrotate.d/{{ item.name }}"
+    owner: root
+    group: root
+    mode: 0644
   with_items: "{{ steamengine_logrotate_scripts }}"
