--- a/meta/main.yml
+++ b/meta/main.yml
@@ -2,7 +2,7 @@
 
 galaxy_info:
   role_name: steamengine
-  author: Steamulo
+  author: steamulo
   description: Production grade installation and deployment workflow for nodejs, tomcat7, play, springboot and static files.
   company: Steamulo
   license: BSD
@@ -11,6 +11,8 @@ galaxy_info:
     - name: Ubuntu
       versions:
         - bionic
+        - focal
     - name: EL
       versions:
         - 7
+        - 8
