--- a/requirements.txt
+++ b/requirements.txt
@@ -1,89 +1,83 @@
-ansible==2.8.5
-ansible-lint==4.1.0
-anyconfig==0.9.7
-arrow==0.15.2
-asn1crypto==1.2.0
-aspy.yaml==1.3.0
-atomicwrites==1.3.0
-attrs==19.3.0
-backports.functools-lru-cache==1.5
-backports.ssl-match-hostname==3.7.0.1
-bcrypt==3.1.7
+ansible==3.3.0
+ansible-base==2.10.8
+ansible-lint==5.0.7
+appdirs==1.4.3
+arrow==1.1.0
+attrs==20.3.0
+bcrypt==3.2.0
 binaryornot==0.4.4
-Cerberus==1.3.1
-certifi==2019.9.11
-cffi==1.13.0
-cfgv==2.0.1
+bracex==2.1.1
+CacheControl==0.12.6
+Cerberus==1.3.3
+certifi==2019.11.28
+cffi==1.14.5
+cfgv==3.2.0
 chardet==3.0.4
-Click==7.0
+click==7.1.2
 click-completion==0.5.2
-colorama==0.4.1
-configparser==4.0.2
-contextlib2==0.6.0.post1
-cookiecutter==1.6.0
-cryptography==2.7
-docker==4.1.0
-entrypoints==0.3
-enum34==1.1.6
-fasteners==0.15
-flake8==3.7.8
-funcsigs==1.0.2
-functools32==3.2.3.post2
-future==0.18.0
-futures==3.3.0
-git-url-parse==1.2.2
-identify==1.4.7
+click-help-colors==0.9
+colorama==0.4.3
+commonmark==0.9.1
+contextlib2==0.6.0
+cookiecutter==1.7.2
+cryptography==3.4.7
+distlib==0.3.1
+distro==1.4.0
+docker==5.0.0
+enrich==1.2.6
+filelock==3.0.12
+flake8==3.9.1
+html5lib==1.0.1
+identify==2.2.4
 idna==2.8
-importlib-metadata==0.23
-importlib-resources==1.0.2
-ipaddress==1.0.22
-Jinja2==2.10.3
+iniconfig==1.1.1
+ipaddr==2.2.0
+Jinja2==2.11.3
 jinja2-time==0.2.0
+lockfile==0.12.2
 MarkupSafe==1.1.1
 mccabe==0.6.1
-molecule==2.22
-monotonic==1.5
-more-itertools==5.0.0
-nodeenv==1.3.3
-packaging==19.2
-paramiko==2.6.0
-pathlib2==2.3.5
-pathspec==0.6.0
-pbr==5.4.3
-pexpect==4.7.0
-pluggy==0.13.0
+molecule==3.3.0
+molecule-docker==0.2.4
+msgpack==0.6.2
+nodeenv==1.6.0
+packaging==20.3
+paramiko==2.7.2
+pathspec==0.8.1
+pep517==0.8.2
+pluggy==0.13.1
 poyo==0.5.0
-pre-commit==1.18.3
-psutil==5.6.3
-ptyprocess==0.6.0
-py==1.8.0
-pycodestyle==2.5.0
-pycparser==2.19
-pyflakes==2.1.1
-PyNaCl==1.3.0
-pyparsing==2.4.2
-pytest==4.6.6
-python-dateutil==2.8.0
-python-gilt==1.2.1
-PyYAML==5.1.2
-requests==2.22.0
-ruamel.ordereddict==0.4.14
-ruamel.yaml==0.16.5
-ruamel.yaml.clib==0.2.0
-scandir==1.10.0
-selinux==0.2.0
-sh==1.12.14
-shellingham==1.3.1
-six==1.12.0
-tabulate==0.8.5
-testinfra==3.2.0
-toml==0.10.0
-tree-format==0.1.2
-typing==3.7.4.1
-urllib3==1.25.6
-virtualenv==16.7.6
-wcwidth==0.1.7
-websocket-client==0.56.0
-whichcraft==0.6.1
-yamllint==1.18.0
-zipp==0.6.0
+pre-commit==2.12.1
+progress==1.5
+py==1.10.0
+pycodestyle==2.7.0
+pycparser==2.20
+pyflakes==2.3.1
+Pygments==2.8.1
+PyNaCl==1.4.0
+pyparsing==2.4.6
+pytest==6.2.3
+pytest-testinfra==6.3.0
+python-dateutil==2.8.1
+python-slugify==5.0.0
+pytoml==0.1.21
+PyYAML==5.4.1
+requests==2.25.1
+retrying==1.3.3
+rich==10.1.0
+ruamel.yaml==0.17.4
+ruamel.yaml.clib==0.2.2
+selinux==0.2.1
+shellingham==1.4.0
+six==1.14.0
+subprocess-tee==0.3.1
+tenacity==7.0.0
+text-unidecode==1.3
+toml==0.10.2
+typing-extensions==3.10.0.0
+urllib3==1.25.8
+virtualenv==20.4.4
+wcmatch==8.1.2
+webencodings==0.5.1
+websocket-client==0.58.0
+yamllint==1.26.1
