--- a/molecule/symfony/converge.yml
+++ b/molecule/symfony/converge.yml
@@ -2,20 +2,15 @@
 - name: Converge
   hosts: instance
   become: true
-
   pre_tasks:
-    - include_tasks: "../resources/setup_{{ ansible_os_family | lower }}.yml"
-
     - name: Add ppa:ondrej/php repository
       apt_repository:
         repo: ppa:ondrej/php
       when: ansible_os_family == 'Debian'
-
     - name: Add remi-php74 repository
       yum:
         name: https://rpms.remirepo.net/enterprise/remi-release-7.rpm
       when: ansible_os_family == 'RedHat'
-
   roles:
     - role: geerlingguy.php
       vars:
@@ -25,7 +20,7 @@
         php_enable_php_fpm: true
         php_webserver_daemon: "nginx"
         php_date_timezone: "Europe/Paris"
-        php_expose_php: Off
+        php_expose_php: false
     - role: geerlingguy.nginx
       vars:
         nginx_ppa_use: true
