--- a/tasks/symfony/deploy.yml
+++ b/tasks/symfony/deploy.yml
@@ -121,6 +121,7 @@
     state: directory
     owner: "{{ steamengine_project_user }}"
     group: "{{ steamengine_app_user }}"
+    mode: 0640
   when: new_build_to_deploy
   tags:
     - steamengine_deploy_sf
