--- a/tasks/tomcat/deploy.yml
+++ b/tasks/tomcat/deploy.yml
@@ -39,8 +39,8 @@
 - name: Download tomcat
   get_url:
     url: "{{ steamengine_tomcat_tomcat_url }}"
-    dest: "{{ steamengine_project_root_path }}/tomcat_{{ steamengine_tomcat_tomcat_version }}.tar.gz"
-    checksum: "sha512:{{ steamengine_tomcat_tomcat_sha512 }}"
+    dest: "{{ steamengine_project_root_path }}/tomcat_{{ steamengine_tomcat_version }}.tar.gz"
+    checksum: "sha512:{{ steamengine_tomcat_archive_sha512 }}"
     owner: "{{ steamengine_project_user }}"
     group: "{{ steamengine_app_user }}"
     mode: u=rwx,g=rx,o=
@@ -58,7 +58,7 @@
 
 - name: Unzip tomcat
   unarchive:
-    src: "{{ steamengine_project_root_path }}/tomcat_{{ steamengine_tomcat_tomcat_version }}.tar.gz"
+    src: "{{ steamengine_project_root_path }}/tomcat_{{ steamengine_tomcat_version }}.tar.gz"
     dest: "{{ steamengine_project_root_path }}/tomcat"
     owner: "{{ steamengine_project_user }}"
     group: "{{ steamengine_app_user }}"
@@ -77,20 +77,9 @@
   tags:
     - steamengine_deploy_tomcat
 
-- name: Remove default tomcat deployment (2)
+- name: Create tomcat webapps directory
   file:
     path: "{{ steamengine_project_root_path }}/tomcat/webapps"
-    state: directory
-    owner: "{{ steamengine_project_user }}"
-    group: "{{ steamengine_app_user }}"
-    mode: u=rwx,g=rx,o=
-  when: new_tomcat_version
-  tags:
-    - steamengine_deploy_tomcat
-
-- name: Create tomcat ROOT deployment
-  file:
-    path: "{{ steamengine_project_root_path }}/tomcat/webapps/ROOT"
     state: directory
     owner: "{{ steamengine_project_user }}"
     group: "{{ steamengine_app_user }}"
@@ -156,13 +145,32 @@
   tags:
     - steamengine_deploy_tomcat
 
-- name: "Fix permissions before updating source"
+- name: Fix permissions before updating source
   command: "/{{ steamengine_project_name }}/bin/steamengine fixpermissions"
   when: new_build_to_deploy
   tags:
     - steamengine_deploy_tomcat
 
-- name: Update webapps/ROOT directory
+- name: Remove tomcat ROOT deployment
+  file:
+    path: "{{ steamengine_project_root_path }}/tomcat/webapps/ROOT"
+    state: absent
+  when: new_build_to_deploy
+  tags:
+    - steamengine_deploy_tomcat
+
+- name: Create tomcat ROOT deployment
+  file:
+    path: "{{ steamengine_project_root_path }}/tomcat/webapps/ROOT"
+    state: directory
+    owner: "{{ steamengine_project_user }}"
+    group: "{{ steamengine_app_user }}"
+    mode: u=rwx,g=rx,o=
+  when: new_build_to_deploy
+  tags:
+    - steamengine_deploy_tomcat
+
+- name: Extract war in tomcat ROOT directory
   unarchive:
     src: "{{ steamengine_project_root_path }}/project.war"
     dest: "{{ steamengine_project_root_path }}/tomcat/webapps/ROOT"
@@ -171,7 +179,7 @@
   tags:
     - steamengine_deploy_tomcat
 
-- name: "Fix permissions after updating source"
+- name: Fix permissions after updating source
   command: "/{{ steamengine_project_name }}/bin/steamengine fixpermissions"
   when: new_build_to_deploy
   tags:
