--- a/molecule/drupal/converge.yml
+++ b/molecule/drupal/converge.yml
@@ -26,6 +26,10 @@
       apt:
         name: python3-psycopg2
       when: ansible_os_family == 'Debian'
+    - name: "Set ansible_python_interpreter for Ubuntu 20"
+      set_fact:
+        ansible_python_interpreter: "/usr/bin/python3"
+      when: ansible_distribution == 'Ubuntu' and ansible_distribution_major_version | int >= 18
     - name: "Set nginx extra_parameters"
       set_fact:
         nginx_extra_parameters: |
