--- a/tasks/drupal/deploy.yml
+++ b/tasks/drupal/deploy.yml
@@ -41,7 +41,7 @@
   register: tempdir
   when: new_build_to_deploy
   tags:
-    - steamengine_deploy_sf
+    - steamengine_deploy_drupal
 
 - name: Unarchive build
   unarchive:
@@ -52,9 +52,9 @@
     group: "{{ steamengine_app_user }}"
   when: new_build_to_deploy
   tags:
-    - steamengine_deploy_sf
+    - steamengine_deploy_drupal
 
-- name: Ensure settings
+- name: Ensure settings is present
   copy:
     src: "{{ tempdir.path }}/web/sites/default/default.settings.php"
     dest: "{{ steamengine_conf_path }}/settings.php"
@@ -71,7 +71,7 @@
 - name: Customize drupal settings
   blockinfile:
     dest: "{{ steamengine_conf_path }}/settings.php"
-    block: "{{ steamengine_drupal_project_setting_block }}"
+    block: "{{ steamengine_drupal_project_setting }}"
     mode: u=rwx,g=rx,o=
     owner: "{{ steamengine_project_user }}"
     group: "{{ steamengine_app_user }}"
@@ -83,6 +83,17 @@
   file:
     path: "{{ steamengine_project_root_path_web }}"
     state: absent
+  when: new_build_to_deploy
+  tags:
+    - steamengine_deploy_drupal
+
+- name: Clean www directory (2)
+  file:
+    path: "{{ steamengine_project_root_path_web }}"
+    owner: "{{ steamengine_project_user }}"
+    group: "{{ steamengine_app_user }}"
+    mode: u=rwx,g=rx,o=
+    state: directory
   when: new_build_to_deploy
   tags:
     - steamengine_deploy_drupal
@@ -106,6 +117,15 @@
     state: link
     src: "{{ steamengine_conf_path }}/settings.php"
     dest: "{{ steamengine_project_root_path_web }}/web/sites/default/settings.php"
+  when: new_build_to_deploy
+  tags:
+    - steamengine_deploy_drupal
+
+- name: Clean link directory
+  file:
+    state: absent
+    path: "{{ steamengine_project_root_path_web }}/{{ item.value }}"
+  with_dict: "{{ steamengine_drupal_persistent_directory }}"
   when: new_build_to_deploy
   tags:
     - steamengine_deploy_drupal
@@ -142,7 +162,7 @@
 
 - include_tasks:
     file: "./deploy_database.yml"
-  when: new_deploy and steamengine_drupal_install_from_db_dump and steamengine_db_dump_url is defined and steamengine_db_dump_url
+  when: new_deploy and steamengine_db_dump_url is defined and steamengine_db_dump_url
   tags:
     - steamengine_deploy
 
