--- a/tasks/drupal/deploy.yml
+++ b/tasks/drupal/deploy.yml
@@ -87,27 +87,19 @@
   tags:
     - steamengine_deploy_drupal
 
-- name: Clean www directory (2)
-  file:
-    path: "{{ steamengine_project_root_path_web }}"
-    owner: "{{ steamengine_project_user }}"
-    group: "{{ steamengine_app_user }}"
-    mode: u=rwx,g=rx,o=
-    state: directory
-  when: new_build_to_deploy
-  tags:
-    - steamengine_deploy_drupal
-
 - name: "Move archive files to {{ steamengine_project_root_path_web }}"
   command: "mv {{ tempdir.path }} {{ steamengine_project_root_path_web }}"
   when: new_build_to_deploy
   tags:
     - steamengine_deploy_drupal
 
-- name: Remove tmp directory
+- name: "Add read permission for {{ steamengine_app_user }}"
   file:
-    path: "{{ tempdir.path }}"
-    state: absent
+    path: "{{ steamengine_project_root_path_web }}"
+    owner: "{{ steamengine_project_user }}"
+    group: "{{ steamengine_app_user }}"
+    recurse: true
+    mode: u=rwx,g=rx,o=
   when: new_build_to_deploy
   tags:
     - steamengine_deploy_drupal
