Add support for db dump before drupal upgrade (code and possibly updatedb)

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -105,3 +105,5 @@ steamengine_drupal_install_option: >
   --account-pass="admin"
   --account-mail="admin@example.com"
   --locale="fr"
+# Number of db backup to keep (0 to deactive backup when deploying)
+steamengine_drupal_keep_last_n_backup: 4
