--- a/tasks/common/runtime.yml
+++ b/tasks/common/runtime.yml
@@ -2,7 +2,7 @@
 
 - name: Create steamengine bin
   template:
-    src: "steamengine_{{ steamengine_project_type }}.sh.j2"
+    src: "steamengine_wrapper.sh.j2"
     dest: "{{ steamengine_bin_path }}/steamengine"
     owner: "{{ steamengine_project_user }}"
     group: "{{ steamengine_project_user }}"
