Add generic cron support

--- a/tasks/common/runtime.yml
+++ b/tasks/common/runtime.yml
@@ -44,4 +44,4 @@
     owner: root
     group: root
     mode: 0644
-  with_items: "{{ steamengine_logrotate_scripts }}"
+  loop: "{{ steamengine_logrotate_scripts }}"
