--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -28,6 +28,21 @@ steamengine_wrapper_scripts_extra: []
 
 steamengine_wrapper_scripts_post_deploy: []
 
+# List of command to run periodically. This command will be automatically put into steamengine wrapper and called from a cron.
+# Example :
+# steamengine_crons:
+#   - name: "hello_world" # without space or special char
+#     description: "Hello World"
+#     command: "cache:hello:world"
+#     minute: "*" # optional
+#     hour: "*" # optional
+#     day: "*" # optional
+#     month: "*" # optional
+#     weekday: "*" # optional
+#     special_time: daily # optional
+#     disabled: false # optional
+steamengine_crons: []
+
 steamengine_build_url_validate_certs: true
 steamengine_build_url_headers: {}
 
