[ADD] symbolic link to persistant directories

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -46,6 +46,15 @@ steamengine_crons: []
 steamengine_build_url_validate_certs: true
 steamengine_build_url_headers: {}
 
+# Create persistant subdirectory
+# All directories are placed in "{{ steamengine_project_name }}/storage"
+# The storage directory is create if at least one item is present
+# Example :
+# steamengine_persistant_directories:
+#     - path: "protected_upload" # Create a subdirectory storage/protected_upload
+#       symlink_src: "upload"    # Create a link project_root/www/upload -> storage/protected_upload
+steamengine_persistant_directories: []
+
 # NODEJS
 steamengine_nodejs_entrypoint: "bin/www"
 steamengine_nodejs_cluster_mode: true
