--- a/molecule/nodejs/converge.yml
+++ b/molecule/nodejs/converge.yml
@@ -15,5 +15,8 @@
         steamengine_project_type: nodejs
         steamengine_build_url: https://delivery.steamulo.org/SteamEngineV2_tests/nodejs-express-build.zip
         steamengine_build_checksum: sha1:5ca5bebc8f3b770358732c90b20b94b710158d55
+        steamengine_persistant_directories:
+          - path: "protected_upload"
+            symlink_src: "upload"
         steamengine_project_configuration:
           PORT: 3300
