[FIX] Persistant to persistent

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -46,14 +46,14 @@ steamengine_crons: []
 steamengine_build_url_validate_certs: true
 steamengine_build_url_headers: {}
 
-# Create persistant subdirectory
+# Create persistent subdirectory
 # All directories are placed in "{{ steamengine_project_name }}/storage"
 # The storage directory is create if at least one item is present
 # Example :
-# steamengine_persistant_directories:
+# steamengine_persistent_directories:
 #     - path: "protected_upload" # Create a subdirectory storage/protected_upload
 #       symlink_src: "upload"    # Create a link project_root/www/upload -> storage/protected_upload
-steamengine_persistant_directories: []
+steamengine_persistent_directories: []
 
 # NODEJS
 steamengine_nodejs_entrypoint: "bin/www"
