--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -52,7 +52,7 @@ steamengine_build_url_headers: {}
 # Example :
 # steamengine_persistent_directories:
 #     - path: "protected_upload" # Create a subdirectory storage/protected_upload
-#       symlink_src: "upload"    # Create a link "{{ steamengine_project_name }}/upload" -> storage/protected_upload
+#       symlink_src: "upload"    # Create a link "/{{ steamengine_project_name }}/upload" -> "/{{ steamengine_project_name }}/storage/protected_upload
 #       delete_dir: False        # Delete the directory (if exists) before creating the symlink . False by default
 steamengine_persistent_directories: []
 
