--- a/tasks/common/post_deploy.yml
+++ b/tasks/common/post_deploy.yml
@@ -7,14 +7,17 @@
     owner: "{{ steamengine_project_user }}"
     group: "{{ steamengine_app_user }}"
     mode: u=rwx,g=rwx,o=
+  when: new_build_to_deploy is defined and new_build_to_deploy
   loop: "{{ steamengine_persistent_directories }}"
 
 - name: Delete directories if exists
   file:
     state: absent
     path: "/{{ steamengine_project_name }}/{{ item.symlink_src }}"
+  when:
+    - item.delete_dir is defined and item.delete_dir
+    - new_build_to_deploy is defined and new_build_to_deploy
   loop: "{{ steamengine_persistent_directories }}"
-  when: item.delete_dir is defined and item.delete_dir
 
 - name: Create symbolic link to storage directories
   file:
@@ -24,7 +27,9 @@
     owner: "{{ steamengine_project_user }}"
     group: "{{ steamengine_app_user }}"
     mode: u=rwx,g=rwx,o=
+  when: new_build_to_deploy is defined and new_build_to_deploy
   loop: "{{ steamengine_persistent_directories }}"
+
 
 - name: "Run post deploy commands"
   command: "/{{ steamengine_project_name }}/bin/steamengine {{ item }}"
