--- a/tasks/drupal/deploy_env_file.yml
+++ b/tasks/drupal/deploy_env_file.yml
@@ -4,17 +4,18 @@
   file:
     state: absent
     path: "{{ steamengine_project_root_path_web }}/.env"
-  when: steamengine_drupal_env_template_path is defined
+  when: steamengine_drupal_env is defined
 
-# Template module is used because copy module is not recommended with variables : https://docs.ansible.com/ansible/latest/collections/ansible/builtin/copy_module.html)
 - name: Create external env file
-  template:
-    src: "{{ steamengine_drupal_env_template_path }}"
+  copy:
+    content: |
+      # This file is managed by Ansible, all changes will be lost.
+      {{ steamengine_drupal_env }}
     dest: "{{ steamengine_conf_path }}/.env"
     owner: "{{ steamengine_project_user }}"
     group: "{{ steamengine_app_user }}"
     mode: u=rw,g=r,o=
-  when: steamengine_drupal_env_template_path is defined
+  when: steamengine_drupal_env is defined
 
 - name: Create env symlink
   file:
@@ -23,4 +24,4 @@
     dest: "{{ steamengine_project_root_path_web }}/.env"
     owner: "{{ steamengine_project_user }}"
     group: "{{ steamengine_app_user }}"
-  when: steamengine_drupal_env_template_path is defined
+  when: steamengine_drupal_env is defined
