--- a/tasks/drupal/deploy.yml
+++ b/tasks/drupal/deploy.yml
@@ -151,7 +151,9 @@
       tags:
         - steamengine_deploy
         - steamengine_deploy_drupal
-  when: steamengine_drupal_env is defined and new_build_to_deploy
+  when:
+    - steamengine_drupal_env is defined and steamengine_drupal_env
+    - new_build_to_deploy
   tags:
     - always
 
